# MyFirstSlicer3DExtension

./: CMakeLists.txt
LineIntensityProfile/: LineIntensityProfile.py
